<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pour_comprendre.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.pour_comprendre.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.example.pour_comprendre.ui.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />
</navigation>