<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:fontFamily="@font/google_sans_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@android:color/transparent"/>

    <TextView
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@android:color/transparent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="220dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/text_field"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="280dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/text_field"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova_font"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="15sp"
        />

    <Button
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/buttons"
        android:fontFamily="@font/proxima_nova_font"
        android:layout_marginTop="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="go_to_home"
        android:textAllCaps="false"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_account_btn"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/proxima_nova_font"
        android:layout_marginTop="460dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="go_to_register"
        android:textColor="@color/white"
        app:strokeColor="@color/buttons"
        app:strokeWidth="2dp"
        android:textAllCaps="false"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        />

    <TextView
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:text="@string/forgotten_password"
        android:textColor="#afb8bb"
        android:backgroundTint="@android:color/transparent"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="go_to_forgotten_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>