<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".NewAccountActivity">

    <TextView
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:fontFamily="@font/google_sans_bold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="352dp"
        android:layout_height="36dp"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="220dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/text_field"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:textSize="15sp"
        android:inputType="text"
    />

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="280dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/text_field"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
    />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="340dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/text_field"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova_font"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="15sp"
    />

    <EditText
        android:id="@+id/check_password"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/text_field"
        android:hint="@string/check_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova_font"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="15sp"
    />

    <Button
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:background="@color/buttons"
        android:layout_marginTop="520dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="check_if_password_are_equals"
        android:textAllCaps="false"
        android:fontFamily="@font/proxima_nova_font"
    />
    
    <ImageView
        android:id="@+id/fail_pass"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/fail_pass"
        android:layout_marginTop="351.5dp"
        android:layout_marginStart="280dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:backgroundTint="@android:color/transparent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>