<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultSearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/box_shadow"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/google_sans_bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="55dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

    </LinearLayout>

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/close"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goBackHome"
    />

    <include layout="@layout/search_bar" />

    <TextView
        android:id="@+id/nb_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="130dp"
        android:textSize="18sp"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/nb_result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/linear_game_research"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="155dp"
        android:backgroundTint="@android:color/transparent"
        android:layout_width="match_parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>