<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/box_shadow"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/google_sans_bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="55dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="22dp"
        android:layout_height="25dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/back"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goBackHome"
        />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/heart_empty"
        android:layout_marginStart="230dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="add_to_favorite"
        />

    <ImageView
        android:id="@+id/star"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/star_empty"
        android:layout_marginStart="320dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="add_to_wishlist"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/main_pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="237dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/text_field"
            app:cardCornerRadius="4dp"
            >
            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/white"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />

            <ImageView
                android:id="@+id/picture_game_jacket"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/white"
                />

            <TextView
                android:id="@+id/title_game"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="12sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/editor_game"
                android:layout_width="100dp"
                android:layout_height="15dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="12sp"
                android:fontFamily="@font/proxima_nova_font"
                android:textColor="@color/white"
                />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
    >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/description_btn"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/description"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/proxima_nova_font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            app:strokeColor="@color/buttons"
            app:strokeWidth="2dp"
            android:textAllCaps="true"
            android:theme="@style/Theme.MaterialComponents.NoActionBar"
            android:onClick="see_description"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/reviews_btn"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/notice"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/proxima_nova_font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            app:strokeColor="@color/buttons"
            app:strokeWidth="2dp"
            android:textAllCaps="true"
            android:theme="@style/Theme.MaterialComponents.NoActionBar"
            android:onClick="see_reviews"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:fontFamily="@font/proxima_nova_font"
        android:textColor="@color/white"
        android:scrollbars="vertical"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notice"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_no_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:text="@string/no_reviews"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp"
        android:fontFamily="@font/proxima_nova_font"
        android:textColor="@color/white"
        android:scrollbars="vertical"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>